# casperflow

./: .gitignore  .mcp.json  Cargo.toml  README.md  agentlease-prd-v3.md
.github/workflows/: deploy-contracts.yml
agent/: deploy-cep18.js  deploy-testnet.js  generate-keys.js  package-lock.json  package.json  test-rpc.js
agent/data/: casperflow.db-shm  casperflow.db-wal
agent/src/: chain-client.ts  db.ts  defi-router.ts  event-stream.ts  notification-service.ts  oracle-client.ts  orchestrator.ts  revenue-monitor.ts  yield-distributor.ts
contracts/casperflow/: Cargo.toml  Odra.toml
contracts/casperflow/src/: lib.rs
contracts/reputation/: Cargo.toml  Odra.toml
contracts/reputation/src/: lib.rs
frontend/: tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/subscribe/: route.ts
frontend/src/app/dashboard/: page.tsx
frontend/src/app/expenses/: page.tsx
frontend/src/app/reputation/: page.tsx
frontend/src/hooks/: useAgentStream.ts  useHealth.ts
oracle-server/: package.json
oracle-server/src/: index.ts
scripts/: deploy-testnet.sh  generate-keys.sh
